; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x_all.c_i2d_PKCS8PrivateKeyInfo_fp.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x_all.c_i2d_PKCS8PrivateKeyInfo_fp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i2d_PKCS8PrivateKeyInfo_fp(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32* @EVP_PKEY2PKCS8(i32* %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @i2d_PKCS8_PRIV_KEY_INFO_fp(i32* %14, i32* %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @PKCS8_PRIV_KEY_INFO_free(i32* %17)
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %13, %12
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32* @EVP_PKEY2PKCS8(i32*) #1

declare dso_local i32 @i2d_PKCS8_PRIV_KEY_INFO_fp(i32*, i32*) #1

declare dso_local i32 @PKCS8_PRIV_KEY_INFO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
